# data-explorer-qt

./: .gitignore  README.MD  Test.xlsx  pyproject.toml  run.py
data_explorer_qt/: dataexplorer.py  dataexplorerGUI.py  guihelper.py
data_explorer_qt.egg-info/: SOURCES.txt
data_explorer_qt/config/: config.toml  readconfig.py
data_explorer_qt/data/: dataenums.py  datamodel.py  filterwidget.py  importexportGUI.py  numcatwidget.py  tableGUI.py
data_explorer_qt/plotter/: foundation.py  names.py  plotter.py
dataexplorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dataexplorer/config/: config.toml
plugins/: basic_plugin.py
tests/: .~lock.Test.xlsx#  Test (Copy).xlsx  TestNaN.xlsx  spoofs.py  test_data.py
